--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Jun 08 2021 13:41:35 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Jun 08 2021 14:27:52 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="608240d38593d459ced5ecc7" data-wf-site="608240d28593d46971d5ecc2">
 <head>
   <meta charset="utf-8">
@@ -21,7 +21,7 @@
     <div class="menu-inner-wrapper">
       <a data-w-id="d3f77689-751d-43cf-717c-b1cc3e80d43a" href="index.html" aria-current="page" class="nav-item w--current"> Home</a>
       <a data-w-id="2f11dab9-54f4-0c75-9bc1-afa3f02da8a5" href="work.html" class="nav-item"> Work</a>
-      <a href="#" class="nav-item">Contact</a>
+      <a data-w-id="d3f77689-751d-43cf-717c-b1cc3e80d43c" href="contact.html" class="nav-item">Contact</a>
     </div>
     <div class="menu-bottom-wrapper"></div><img src="images/white-lines-2.svg" loading="lazy" alt="" class="menu-lines-bg">
   </div>
