--- a/work.html
+++ b/work.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Jun 08 2021 13:41:35 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Jun 08 2021 14:27:52 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6083d73ad2849627dae08942" data-wf-site="608240d28593d46971d5ecc2">
 <head>
   <meta charset="utf-8">
@@ -23,7 +23,7 @@
     <div class="menu-inner-wrapper">
       <a data-w-id="d3f77689-751d-43cf-717c-b1cc3e80d43a" href="index.html" class="nav-item"> Home</a>
       <a data-w-id="2f11dab9-54f4-0c75-9bc1-afa3f02da8a5" href="work.html" aria-current="page" class="nav-item w--current"> Work</a>
-      <a href="#" class="nav-item">Contact</a>
+      <a data-w-id="d3f77689-751d-43cf-717c-b1cc3e80d43c" href="contact.html" class="nav-item">Contact</a>
     </div>
     <div class="menu-bottom-wrapper"></div><img src="images/white-lines-2.svg" loading="lazy" alt="" class="menu-lines-bg">
   </div>
@@ -126,7 +126,7 @@
     <div style="display:none;-webkit-transform:translate3d(100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="_08-product-detail">
       <div class="d-1200">
         <div class="detail-txt">
-          <h4>急冻引擎-手机散热器</h4>
+          <h4>急冻引擎</h4>
           <h5>Freezing Engine-Cellphone Heat Sink</h5>
           <h6>/ 2020 </h6>
         </div><img src="images/04_3.jpg" loading="lazy" data-w-id="13555084-8209-b131-0e15-a2a6e021edb0" sizes="100vw" srcset="images/04_3-p-500.jpeg 500w, images/04_3-p-800.jpeg 800w, images/04_3-p-1600.jpeg 1600w, images/04_3.jpg 1920w" alt="" class="image-detail">
