--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Jun 08 2021 14:27:52 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Jun 08 2021 14:37:45 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60bf7868c7ac5e3669190b38" data-wf-site="608240d28593d46971d5ecc2">
 <head>
   <meta charset="utf-8">
@@ -62,8 +62,165 @@
       </div>
     </div>
   </div>
+  <div class="cursor-wrapper">
+    <div data-w-id="41c7fa65-8bbf-ce55-ffb5-7f36bf675006" class="cursor-outer-circle"></div>
+  </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=608240d28593d46971d5ecc2" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
+  <style>
+.fixed-lines-container {
+	pointer-events: none;
+}
+.cursor-wrapper {
+	pointer-events: none;
+  mix-blend-mode: difference;
+}
+</style>
+  <script>
+	/*Mouse over links*/
+	$('a').mouseenter(function() {
+  	$('.cursor-outer-circle').animate({
+    	height: '+=40',
+      width: '+=40'
+    },
+    100, 'linear'
+    );
+  });
+  $('a').mouseleave(function() {
+  	$('.cursor-outer-circle').animate({
+    	height: '-=40',
+      width: '-=40'
+    },
+    100, 'linear'
+    );
+  });
+  /*Mouse over video*/
+  $('.img-outer-wrapper').mouseenter(function() {
+  	$('.cursor-outer-circle').animate({
+    	height: '+=75',
+      width: '+=75'
+    },
+    200, 'linear'
+    );
+    $('.cursor-wrapper').css({
+    	"mix-blend-mode": "normal"
+    });
+    $('.cursor-outer-circle').css({
+    	"border": "2px solid #ffffff",
+      "background": "none",
+    });
+  });
+  $('.img-outer-wrapper').mouseleave(function() {
+  	$('.cursor-outer-circle').animate({
+    	height: '-=75',
+      width: '-=75'
+    },
+    200, 'linear'
+    );
+    $('.cursor-wrapper').css({
+    	"mix-blend-mode": "difference"
+    });
+    $('.cursor-outer-circle').css({
+    	"border": "none",
+      "background": "#ffffff"
+    });
+  });
+  $('.logo').mouseenter(function() {
+  	$('.cursor-outer-circle').animate({
+    	height: '+=75',
+      width: '+=75'
+    },
+    200, 'linear'
+    );
+    $('.cursor-wrapper').css({
+    	"mix-blend-mode": "normal"
+    });
+    $('.cursor-outer-circle').css({
+    	"border": "2px solid #ffffff",
+      "background": "none",
+    });
+  });
+  $('.logo').mouseleave(function() {
+  	$('.cursor-outer-circle').animate({
+    	height: '-=75',
+      width: '-=75'
+    },
+    200, 'linear'
+    );
+    $('.cursor-wrapper').css({
+    	"mix-blend-mode": "difference"
+    });
+    $('.cursor-outer-circle').css({
+    	"border": "none",
+      "background": "#ffffff"
+    });
+  });
+  $('.s-full-width-img').mouseenter(function() {
+  	$('.cursor-outer-circle').animate({
+    	height: '+=75',
+      width: '+=75'
+    },
+    200, 'linear'
+    );
+    $('.cursor-wrapper').css({
+    	"mix-blend-mode": "normal"
+    });
+    $('.cursor-outer-circle').css({
+    	"border": "2px solid #ffffff",
+      "background": "none",
+    });
+  });
+  $('.s-full-width-img').mouseleave(function() {
+  	$('.cursor-outer-circle').animate({
+    	height: '-=75',
+      width: '-=75'
+    },
+    200, 'linear'
+    );
+    $('.cursor-wrapper').css({
+    	"mix-blend-mode": "difference"
+    });
+    $('.cursor-outer-circle').css({
+    	"border": "none",
+      "background": "#ffffff"
+    });
+  });
+  /*Mouse over blog*/
+  $('.blog-grid-wrapper').mouseenter(function() {
+  	$('.cursor-outer-circle').animate({
+    	height: '+=50',
+      width: '+=50'
+    },
+    200, 'linear'
+    );
+  });
+  $('.blog-grid-wrapper').mouseleave(function() {
+  	$('.cursor-outer-circle').animate({
+    	height: '-=50',
+      width: '-=50'
+    },
+    200, 'linear'
+    );
+  });
+  /*Mouse over menu*/
+  $('.menu-btn').mouseenter(function() {
+  	$('.cursor-outer-circle').animate({
+    	height: '+=75',
+      width: '+=75'
+    },
+    200, 'linear'
+    );
+  });
+  $('.menu-btn').mouseleave(function() {
+  	$('.cursor-outer-circle').animate({
+    	height: '-=75',
+      width: '-=75'
+    },
+    200, 'linear'
+    );
+  });
+  /*Mouse over project 1*/
+</script>
 </body>
 </html>
