--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Jun 08 2021 14:37:45 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Jun 09 2021 06:32:54 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60bf7868c7ac5e3669190b38" data-wf-site="608240d28593d46971d5ecc2">
 <head>
   <meta charset="utf-8">
@@ -11,6 +11,7 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/croissant-design.webflow.css" rel="stylesheet" type="text/css">
+  <style>@media (min-width:992px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="85796c95-c2fd-891e-fad4-9d9526b96359"] {opacity:0;}}@media (max-width:991px) and (min-width:768px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="85796c95-c2fd-891e-fad4-9d9526b96359"] {opacity:0;}}</style>
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Merriweather:300,300italic,400,400italic,700,700italic,900,900italic","Manrope:regular,500,600","Inter:regular,500,600","Source Sans Pro:regular:cyrillic,cyrillic-ext,greek,greek-ext,latin,latin-ext,vietnamese","ZCOOL QingKe HuangYou:regular:chinese-simplified,latin","ZCOOL XiaoWei:regular:chinese-simplified,latin"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
@@ -36,20 +37,20 @@
     </div>
     <div class="menu-bottom-wrapper"></div><img src="images/white-lines-2.svg" loading="lazy" alt="" class="menu-lines-bg">
   </div>
-  <div data-w-id="a398b934-f41b-2eb7-933a-40b97c2d5273" class="s-content">
-    <div data-w-id="a398b934-f41b-2eb7-933a-40b97c2d5274" class="c-1200">
-      <div class="flex-split-wrapper">
-        <div class="split-left">
+  <div data-w-id="3ec8e1c9-9308-629b-6f6e-906e4b301db8" class="s-content page-contact">
+    <div class="c-1200">
+      <div class="flex-split-wrapper page-contact">
+        <div class="split-left page-contact">
           <h1 class="h3-main">联系我，期待与你的合作</h1>
           <h4 class="h3-main no-margin">Connect with me.<br>Look forward to working with you.</h4>
         </div>
-        <div data-w-id="a398b934-f41b-2eb7-933a-40b97c2d527d" class="split-right"><img src="images/email.svg" loading="lazy" alt="" class="small-logo logo">
+        <div data-w-id="85796c95-c2fd-891e-fad4-9d9526b96359" class="split-right"><img src="images/email.svg" loading="lazy" alt="" class="small-logo logo">
           <div class="p-white">Email：<br>zbswork@outlook.com</div>
         </div>
       </div>
     </div>
-    <div data-w-id="a398b934-f41b-2eb7-933a-40b97c2d5283" class="wave-lines-bg"><img src="images/double-wave.svg" loading="lazy" alt="" class="image-3"></div>
-    <div data-w-id="a398b934-f41b-2eb7-933a-40b97c2d5285" class="footer-bottom-wrapper">
+    <div class="wave-lines-bg"><img src="images/double-wave.svg" loading="lazy" alt="" class="image-3"></div>
+    <div class="footer-bottom-wrapper">
       <div class="c-1200">
         <div class="footer-split-wrapper">
           <div class="footer-left">
