--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Jun 08 2021 14:37:45 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Jun 09 2021 06:32:54 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="608240d38593d459ced5ecc7" data-wf-site="608240d28593d46971d5ecc2">
 <head>
   <meta charset="utf-8">
@@ -108,7 +108,7 @@
       <div class="flex-split-wrapper">
         <div class="split-left">
           <h1 class="h3-main">联系我，期待与你的合作</h1>
-          <h4 class="h3-main no-margin">Connect with me.<br>Look forward to working with you.</h4>
+          <div class="p-white">Connect with me.<br>Look forward to working with you.</div>
         </div>
         <div data-w-id="a398b934-f41b-2eb7-933a-40b97c2d527d" class="split-right"><img src="images/email.svg" loading="lazy" alt="" class="small-logo logo">
           <div class="p-white">Email：<br>zbswork@outlook.com</div>
