--- a/work.html
+++ b/work.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Jun 09 2021 06:32:54 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Jun 09 2021 09:57:58 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6083d73ad2849627dae08942" data-wf-site="608240d28593d46971d5ecc2">
 <head>
   <meta charset="utf-8">
@@ -27,7 +27,7 @@
     </div>
     <div class="menu-bottom-wrapper"></div><img src="images/white-lines-2.svg" loading="lazy" alt="" class="menu-lines-bg">
   </div>
-  <div class="nav-outer-wrapper">
+  <div data-w-id="6f189998-7318-c0a1-e274-ba57b56a6e51" class="nav-outer-wrapper">
     <div class="nav-inner-wrapper">
       <a data-w-id="6f189998-7318-c0a1-e274-ba57b56a6e53" href="index.html" class="nav-brand w-inline-block"><img src="images/LOGO_head.svg" loading="lazy" width="84.5" data-w-id="6f189998-7318-c0a1-e274-ba57b56a6e54" alt="" class="logo"><img src="images/LOGO_name.svg" loading="lazy" width="80" alt="" class="logo_name"></a>
       <div class="nav-menu-right">
@@ -199,184 +199,184 @@
   <div class="_1-container w-container">
     <div data-w-id="42cd7c1f-5243-d92e-c356-18f5b4fcec23" class="section-1">
       <div class="product-div p-1">
-        <div class="p-1200 p-1">
-          <div class="enter---readmore">
-            <div id="w-node-_42cd7c1f-5243-d92e-c356-18f5b4fcec26-dae08942" class="side-left">
-              <h3 class="heading-2">01</h3>
-            </div>
-            <a href="#detail-top" data-w-id="531e7227-d1d6-8549-d7ba-5ab3023bf32d" style="opacity:0" class="readmore w-inline-block">
-              <h5 class="heading-3">Read more</h5>
-            </a>
+        <div class="enter---readmore">
+          <div id="w-node-_42cd7c1f-5243-d92e-c356-18f5b4fcec26-dae08942" class="side-left">
+            <h3 class="heading-2">01</h3>
           </div>
+          <a href="#detail-top" id="w-node-_531e7227-d1d6-8549-d7ba-5ab3023bf32d-dae08942" data-w-id="531e7227-d1d6-8549-d7ba-5ab3023bf32d" style="opacity:0" class="readmore w-inline-block">
+            <h5 class="heading-3">Read more</h5>
+          </a>
         </div>
+        <div class="p-1200 p-1 hover"></div>
+        <div class="p-1200 p-1"></div>
       </div>
     </div>
     <div data-w-id="efabec10-099e-8881-cbf2-4e95cf6591c6" class="section-1">
       <div class="product-div p-2">
-        <div class="p-1200 p-2">
-          <div class="enter---readmore">
-            <div id="w-node-e2427c72-042b-983c-da34-cabd0ed2f0e3-dae08942" class="side-left">
-              <h3 class="heading-2">02</h3>
-            </div>
-            <a href="#detail-top" data-w-id="e2427c72-042b-983c-da34-cabd0ed2f0e6" style="opacity:0" class="readmore w-inline-block">
-              <h5 class="heading-3">Read more</h5>
-            </a>
+        <div class="enter---readmore">
+          <div id="w-node-_8eb8d0d3-75af-d997-0366-a3e0feb0a0fa-dae08942" class="side-left">
+            <h3 class="heading-2">02</h3>
           </div>
+          <a href="#detail-top" id="w-node-_8eb8d0d3-75af-d997-0366-a3e0feb0a0fd-dae08942" data-w-id="8eb8d0d3-75af-d997-0366-a3e0feb0a0fd" style="opacity:0" class="readmore w-inline-block">
+            <h5 class="heading-3">Read more</h5>
+          </a>
         </div>
+        <div class="p-1200 p-2 hover"></div>
+        <div class="p-1200 p-2"></div>
       </div>
     </div>
     <div data-w-id="fb284994-5733-b635-c513-af7ef49faf16" class="section-1">
       <div class="product-div p-3">
-        <div class="p-1200 p-3">
-          <div class="enter---readmore">
-            <div id="w-node-_5e9236e0-ab00-0778-248e-69394f7c5f3b-dae08942" class="side-left">
-              <h3 class="heading-2">03</h3>
-            </div>
-            <a href="#detail-top" data-w-id="5e9236e0-ab00-0778-248e-69394f7c5f3e" style="opacity:0" class="readmore w-inline-block">
-              <h5 class="heading-3">Read more</h5>
-            </a>
+        <div class="enter---readmore">
+          <div id="w-node-e5e2b132-411c-4b33-bd7c-58a864e29562-dae08942" class="side-left">
+            <h3 class="heading-2">03</h3>
           </div>
+          <a href="#detail-top" id="w-node-e5e2b132-411c-4b33-bd7c-58a864e29565-dae08942" data-w-id="e5e2b132-411c-4b33-bd7c-58a864e29565" style="opacity:0" class="readmore w-inline-block">
+            <h5 class="heading-3">Read more</h5>
+          </a>
         </div>
+        <div class="p-1200 p-3 hover"></div>
+        <div class="p-1200 p-3"></div>
       </div>
     </div>
     <div data-w-id="75ac05be-d703-bd8b-c193-b4a74fd8fca8" class="section-1">
       <div class="product-div p-4">
-        <div class="p-1200 p-4">
-          <div class="enter---readmore">
-            <div id="w-node-e6707072-8b8e-1bc8-de4f-4d5d9def6769-dae08942" class="side-left">
-              <h3 class="heading-2">04</h3>
-            </div>
-            <a href="#detail-top" data-w-id="e6707072-8b8e-1bc8-de4f-4d5d9def676c" style="opacity:0" class="readmore w-inline-block">
-              <h5 class="heading-3">Read more</h5>
-            </a>
+        <div class="enter---readmore">
+          <div id="w-node-_02ede346-cbf1-5651-9ed1-84e5defa75f8-dae08942" class="side-left">
+            <h3 class="heading-2">04</h3>
           </div>
+          <a href="#detail-top" id="w-node-_02ede346-cbf1-5651-9ed1-84e5defa75fb-dae08942" data-w-id="02ede346-cbf1-5651-9ed1-84e5defa75fb" style="opacity:0" class="readmore w-inline-block">
+            <h5 class="heading-3">Read more</h5>
+          </a>
         </div>
+        <div class="p-1200 p-4 hover"></div>
+        <div class="p-1200 p-4"></div>
       </div>
     </div>
     <div data-w-id="5433fffd-0681-8cfe-c574-51bb3c3e10fd" class="section-1">
       <div class="product-div p-5">
-        <div class="p-1200 p-5">
-          <div class="enter---readmore">
-            <div id="w-node-_071406f8-8ecc-3f86-0995-23c03b693ab6-dae08942" class="side-left">
-              <h3 class="heading-2">05</h3>
-            </div>
-            <a href="#detail-top" data-w-id="071406f8-8ecc-3f86-0995-23c03b693ab9" style="opacity:0" class="readmore w-inline-block">
-              <h5 class="heading-3">Read more</h5>
-            </a>
+        <div class="enter---readmore">
+          <div id="w-node-ec5e952b-7ab6-a08f-e3b6-97b81ed8d7e9-dae08942" class="side-left">
+            <h3 class="heading-2">05</h3>
           </div>
+          <a href="#detail-top" id="w-node-ec5e952b-7ab6-a08f-e3b6-97b81ed8d7ec-dae08942" data-w-id="ec5e952b-7ab6-a08f-e3b6-97b81ed8d7ec" style="opacity:0" class="readmore w-inline-block">
+            <h5 class="heading-3">Read more</h5>
+          </a>
         </div>
+        <div class="p-1200 p-5 hover"></div>
+        <div class="p-1200 p-5"></div>
       </div>
     </div>
     <div data-w-id="764c0b8e-c125-1186-d631-1972f42f10f9" class="section-1">
       <div class="product-div p-6">
-        <div class="p-1200 p-6">
-          <div class="enter---readmore">
-            <div id="w-node-d50bffd0-360a-7aa4-2bfd-cb772269d76e-dae08942" class="side-left">
-              <h3 class="heading-2">06</h3>
-            </div>
-            <a href="#detail-top" data-w-id="d50bffd0-360a-7aa4-2bfd-cb772269d771" style="opacity:0" class="readmore w-inline-block">
-              <h5 class="heading-3">Read more</h5>
-            </a>
+        <div class="enter---readmore">
+          <div id="w-node-_20b8290c-0733-c10b-1c6e-38b5f39432f1-dae08942" class="side-left">
+            <h3 class="heading-2">06</h3>
           </div>
+          <a href="#detail-top" id="w-node-_20b8290c-0733-c10b-1c6e-38b5f39432f4-dae08942" data-w-id="20b8290c-0733-c10b-1c6e-38b5f39432f4" style="opacity:0" class="readmore w-inline-block">
+            <h5 class="heading-3">Read more</h5>
+          </a>
         </div>
+        <div class="p-1200 p-6 hover"></div>
+        <div class="p-1200 p-6"></div>
       </div>
     </div>
     <div data-w-id="a30cdb9a-476e-0408-106c-0ff84745c1f1" class="section-1">
       <div class="product-div p-7">
-        <div class="p-1200 p-7">
-          <div class="enter---readmore">
-            <div id="w-node-_3828dde4-212b-db74-b970-fcbd9aee680c-dae08942" class="side-left">
-              <h3 class="heading-2">07</h3>
-            </div>
-            <a href="#detail-top" data-w-id="3828dde4-212b-db74-b970-fcbd9aee680f" style="opacity:0" class="readmore w-inline-block">
-              <h5 class="heading-3">Read more</h5>
-            </a>
+        <div class="enter---readmore">
+          <div id="w-node-_2e08ebf3-6a0f-db92-caf9-7ea1f37b9df1-dae08942" class="side-left">
+            <h3 class="heading-2">07</h3>
           </div>
+          <a href="#detail-top" id="w-node-_2e08ebf3-6a0f-db92-caf9-7ea1f37b9df4-dae08942" data-w-id="2e08ebf3-6a0f-db92-caf9-7ea1f37b9df4" style="opacity:0" class="readmore w-inline-block">
+            <h5 class="heading-3">Read more</h5>
+          </a>
         </div>
+        <div class="p-1200 p-7 hover"></div>
+        <div class="p-1200 p-7"></div>
       </div>
     </div>
     <div data-w-id="213f2aff-8648-aea1-f32d-4874b4205cd2" class="section-1">
       <div class="product-div p-8">
-        <div class="p-1200 p-8">
-          <div class="enter---readmore">
-            <div id="w-node-c88b0488-17e6-83b8-ce38-670cf30156d1-dae08942" class="side-left">
-              <h3 class="heading-2">08</h3>
-            </div>
-            <a href="#detail-top" data-w-id="c88b0488-17e6-83b8-ce38-670cf30156d4" style="opacity:0" class="readmore w-inline-block">
-              <h5 class="heading-3">Read more</h5>
-            </a>
+        <div class="enter---readmore">
+          <div id="w-node-_7d47b680-1533-1428-87ce-226b01afb11c-dae08942" class="side-left">
+            <h3 class="heading-2">08</h3>
           </div>
+          <a href="#detail-top" id="w-node-_7d47b680-1533-1428-87ce-226b01afb11f-dae08942" data-w-id="7d47b680-1533-1428-87ce-226b01afb11f" style="opacity:0" class="readmore w-inline-block">
+            <h5 class="heading-3">Read more</h5>
+          </a>
         </div>
+        <div class="p-1200 p-8 hover"></div>
+        <div class="p-1200 p-8"></div>
       </div>
     </div>
     <div data-w-id="91aec1c4-1b09-75d4-ee01-1516136f3a56" class="section-1">
       <div class="product-div p-9">
-        <div class="p-1200 p-9">
-          <div class="enter---readmore">
-            <div id="w-node-_07a2c4bf-f167-22e2-e32a-f2fb478239f2-dae08942" class="side-left">
-              <h3 class="heading-2">09</h3>
-            </div>
-            <a href="#detail-top" data-w-id="07a2c4bf-f167-22e2-e32a-f2fb478239f5" style="opacity:0" class="readmore w-inline-block">
-              <h5 class="heading-3">Read more</h5>
-            </a>
+        <div class="enter---readmore">
+          <div id="w-node-c14f8cf9-c209-4d8a-21d3-46137a1bab70-dae08942" class="side-left">
+            <h3 class="heading-2">09</h3>
           </div>
+          <a href="#detail-top" id="w-node-c14f8cf9-c209-4d8a-21d3-46137a1bab73-dae08942" data-w-id="c14f8cf9-c209-4d8a-21d3-46137a1bab73" style="opacity:0" class="readmore w-inline-block">
+            <h5 class="heading-3">Read more</h5>
+          </a>
         </div>
+        <div class="p-1200 p-9 hover"></div>
+        <div class="p-1200 p-9"></div>
       </div>
     </div>
     <div data-w-id="4f2460c7-13fa-f3b8-96ef-daa8f82e7b70" class="section-1">
       <div class="product-div p-10">
-        <div class="p-1200 p-10">
-          <div class="enter---readmore">
-            <div id="w-node-_4174c1fe-8771-5704-89ef-9ac088190fc4-dae08942" class="side-left">
-              <h3 class="heading-2">10</h3>
-            </div>
-            <a href="#detail-top" data-w-id="4174c1fe-8771-5704-89ef-9ac088190fc7" style="opacity:0" class="readmore w-inline-block">
-              <h5 class="heading-3">Read more</h5>
-            </a>
+        <div class="enter---readmore">
+          <div id="w-node-_86bad5dc-fcb8-c856-67aa-5533c7dd879b-dae08942" class="side-left">
+            <h3 class="heading-2">10</h3>
           </div>
+          <a href="#detail-top" id="w-node-_86bad5dc-fcb8-c856-67aa-5533c7dd879e-dae08942" data-w-id="86bad5dc-fcb8-c856-67aa-5533c7dd879e" style="opacity:0" class="readmore w-inline-block">
+            <h5 class="heading-3">Read more</h5>
+          </a>
         </div>
+        <div class="p-1200 p-10 hover"></div>
+        <div class="p-1200 p-10"></div>
       </div>
     </div>
     <div data-w-id="b6619ec0-3345-1091-99c3-23ab0a45964b" class="section-1">
       <div class="product-div p-11">
-        <div class="p-1200 p-11">
-          <div class="enter---readmore">
-            <div id="w-node-_88c6ca9b-4245-a162-8539-ebf0cad5e690-dae08942" class="side-left">
-              <h3 class="heading-2">11</h3>
-            </div>
-            <a href="#detail-top" data-w-id="88c6ca9b-4245-a162-8539-ebf0cad5e693" style="opacity:0" class="readmore w-inline-block">
-              <h5 class="heading-3">Read more</h5>
-            </a>
+        <div class="enter---readmore">
+          <div id="w-node-_4d82b84e-8cea-40e1-d1f5-96e28717f5c0-dae08942" class="side-left">
+            <h3 class="heading-2">11</h3>
           </div>
+          <a href="#detail-top" id="w-node-_4d82b84e-8cea-40e1-d1f5-96e28717f5c3-dae08942" data-w-id="4d82b84e-8cea-40e1-d1f5-96e28717f5c3" style="opacity:0" class="readmore w-inline-block">
+            <h5 class="heading-3">Read more</h5>
+          </a>
         </div>
+        <div class="p-1200 p-11 hover"></div>
+        <div class="p-1200 p-11"></div>
       </div>
     </div>
     <div data-w-id="78dc2d18-5b28-2b3f-e156-2be11cc2710b" class="section-1">
       <div class="product-div p-12">
-        <div class="p-1200 p-12">
-          <div class="enter---readmore">
-            <div id="w-node-_78dc2d18-5b28-2b3f-e156-2be11cc2710f-dae08942" class="side-left">
-              <h3 class="heading-2">12</h3>
-            </div>
-            <a href="#detail-top" data-w-id="78dc2d18-5b28-2b3f-e156-2be11cc27112" style="opacity:0" class="readmore w-inline-block">
-              <h5 class="heading-3">Read more</h5>
-            </a>
+        <div class="enter---readmore">
+          <div id="w-node-_3bccf904-abf0-9f31-0231-62ce9fc7bc81-dae08942" class="side-left">
+            <h3 class="heading-2">12</h3>
           </div>
+          <a href="#detail-top" id="w-node-_3bccf904-abf0-9f31-0231-62ce9fc7bc84-dae08942" data-w-id="3bccf904-abf0-9f31-0231-62ce9fc7bc84" style="opacity:0" class="readmore w-inline-block">
+            <h5 class="heading-3">Read more</h5>
+          </a>
         </div>
+        <div class="p-1200 p-12 hover"></div>
+        <div class="p-1200 p-12"></div>
       </div>
     </div>
     <div data-w-id="e1af9add-1f34-482d-dfe4-f82c4dab7e14" class="section-1">
       <div class="product-div p-13">
-        <div class="p-1200 p-13">
-          <div class="enter---readmore">
-            <div id="w-node-e1af9add-1f34-482d-dfe4-f82c4dab7e18-dae08942" class="side-left">
-              <h3 class="heading-2">13</h3>
-            </div>
-            <a href="#detail-top" data-w-id="e1af9add-1f34-482d-dfe4-f82c4dab7e1b" style="opacity:0" class="readmore w-inline-block">
-              <h5 class="heading-3">Read more</h5>
-            </a>
+        <div class="enter---readmore">
+          <div id="w-node-_1f744f09-1322-1bd0-5e65-2979d62ab958-dae08942" class="side-left">
+            <h3 class="heading-2">13</h3>
           </div>
+          <a href="#detail-top" id="w-node-_1f744f09-1322-1bd0-5e65-2979d62ab95b-dae08942" data-w-id="1f744f09-1322-1bd0-5e65-2979d62ab95b" style="opacity:0" class="readmore w-inline-block">
+            <h5 class="heading-3">Read more</h5>
+          </a>
         </div>
+        <div class="p-1200 p-13 hover"></div>
+        <div class="p-1200 p-13"></div>
       </div>
     </div>
   </div>
