--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Jun 09 2021 09:57:58 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Jun 10 2021 03:05:13 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60bf7868c7ac5e3669190b38" data-wf-site="608240d28593d46971d5ecc2">
 <head>
   <meta charset="utf-8">
@@ -40,8 +40,8 @@
     <div data-w-id="85796c95-c2fd-891e-fad4-9d9526b96350" style="filter:invert(100%)" class="c-1200">
       <div class="flex-split-wrapper page-contact">
         <div class="split-left page-contact">
-          <h1 class="h3-main">联系我，期待与你的合作</h1>
-          <h4 class="h3-main no-margin">Connect with me.<br>Look forward to working with you.</h4>
+          <h1 class="h3-main">欢迎电邮联系我<br>获取更多联系方式并深入交流<br>期待与你的合作</h1>
+          <div class="p-white">Welcome to contact me by email,<br>get more contact information and in-depth communication,<br>look forward to cooperating with you.</div>
         </div>
         <div class="split-right"><img src="images/email.svg" loading="lazy" alt="" class="small-logo logo">
           <div class="p-white">Email：<br>zbswork@outlook.com</div>
