--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Jun 09 2021 09:57:58 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Jun 10 2021 03:05:13 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="608240d38593d459ced5ecc7" data-wf-site="608240d28593d46971d5ecc2">
 <head>
   <meta charset="utf-8">
@@ -105,14 +105,18 @@
   </div>
   <div data-w-id="a398b934-f41b-2eb7-933a-40b97c2d5273" class="s-content">
     <div data-w-id="a398b934-f41b-2eb7-933a-40b97c2d5274" class="c-1200">
-      <div class="flex-split-wrapper">
+      <div data-w-id="a398b934-f41b-2eb7-933a-40b97c2d5275" class="flex-split-wrapper">
         <div class="split-left">
           <h1 class="h3-main">联系我，期待与你的合作</h1>
-          <div class="p-white">Connect with me.<br>Look forward to working with you.</div>
+          <div class="p-white">Connect with me.<br>Look forward to cooperating with you.</div>
         </div>
         <div data-w-id="a398b934-f41b-2eb7-933a-40b97c2d527d" class="split-right"><img src="images/email.svg" loading="lazy" alt="" class="small-logo logo">
           <div class="p-white">Email：<br>zbswork@outlook.com</div>
         </div>
+      </div>
+      <div data-w-id="e49614f5-d9eb-a8dd-2354-a7b0fbdd6c21" class="dont-share">
+        <h4>未经允许请勿转载</h4>
+        <div class="p-white">Don&#x27;t transload without permission.</div>
       </div>
     </div>
     <div data-w-id="a398b934-f41b-2eb7-933a-40b97c2d5283" class="wave-lines-bg"><img src="images/double-wave.svg" loading="lazy" alt="" class="image-3"></div>
