--- a/work.html
+++ b/work.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Jun 09 2021 09:57:58 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Jun 10 2021 03:05:13 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6083d73ad2849627dae08942" data-wf-site="608240d28593d46971d5ecc2">
 <head>
   <meta charset="utf-8">
@@ -39,6 +39,10 @@
   <div style="opacity:0;-webkit-transform:translate3d(100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="buttom">
     <a href="work.html" aria-current="page" class="back-button w-inline-block w--current"><img src="images/arrow-white.svg" loading="lazy" alt="" class="image-5"></a>
     <link rel="prerender" href="/work">
+  </div>
+  <div style="-webkit-transform:translate3d(100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="detail-bg">
+    <div class="detail-bg-img-1"></div>
+    <div class="detail-bg-img-2"></div>
   </div>
   <div class="d-container w-container">
     <div id="detail-top" class="detail-top"></div>
@@ -192,12 +196,8 @@
       </div>
     </div>
   </div>
-  <div style="-webkit-transform:translate3d(100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="detail-bg">
-    <div class="detail-bg-img-1"></div>
-    <div class="detail-bg-img-2"></div>
-  </div>
   <div class="_1-container w-container">
-    <div data-w-id="42cd7c1f-5243-d92e-c356-18f5b4fcec23" class="section-1">
+    <div id="s01" data-w-id="42cd7c1f-5243-d92e-c356-18f5b4fcec23" class="section-1">
       <div class="product-div p-1">
         <div class="enter---readmore">
           <div id="w-node-_42cd7c1f-5243-d92e-c356-18f5b4fcec26-dae08942" class="side-left">
@@ -211,7 +211,7 @@
         <div class="p-1200 p-1"></div>
       </div>
     </div>
-    <div data-w-id="efabec10-099e-8881-cbf2-4e95cf6591c6" class="section-1">
+    <div id="s02" data-w-id="efabec10-099e-8881-cbf2-4e95cf6591c6" class="section-1">
       <div class="product-div p-2">
         <div class="enter---readmore">
           <div id="w-node-_8eb8d0d3-75af-d997-0366-a3e0feb0a0fa-dae08942" class="side-left">
@@ -225,7 +225,7 @@
         <div class="p-1200 p-2"></div>
       </div>
     </div>
-    <div data-w-id="fb284994-5733-b635-c513-af7ef49faf16" class="section-1">
+    <div id="s03" data-w-id="fb284994-5733-b635-c513-af7ef49faf16" class="section-1">
       <div class="product-div p-3">
         <div class="enter---readmore">
           <div id="w-node-e5e2b132-411c-4b33-bd7c-58a864e29562-dae08942" class="side-left">
@@ -239,7 +239,7 @@
         <div class="p-1200 p-3"></div>
       </div>
     </div>
-    <div data-w-id="75ac05be-d703-bd8b-c193-b4a74fd8fca8" class="section-1">
+    <div id="s04" data-w-id="75ac05be-d703-bd8b-c193-b4a74fd8fca8" class="section-1">
       <div class="product-div p-4">
         <div class="enter---readmore">
           <div id="w-node-_02ede346-cbf1-5651-9ed1-84e5defa75f8-dae08942" class="side-left">
@@ -253,7 +253,7 @@
         <div class="p-1200 p-4"></div>
       </div>
     </div>
-    <div data-w-id="5433fffd-0681-8cfe-c574-51bb3c3e10fd" class="section-1">
+    <div id="s05" data-w-id="5433fffd-0681-8cfe-c574-51bb3c3e10fd" class="section-1">
       <div class="product-div p-5">
         <div class="enter---readmore">
           <div id="w-node-ec5e952b-7ab6-a08f-e3b6-97b81ed8d7e9-dae08942" class="side-left">
@@ -267,7 +267,7 @@
         <div class="p-1200 p-5"></div>
       </div>
     </div>
-    <div data-w-id="764c0b8e-c125-1186-d631-1972f42f10f9" class="section-1">
+    <div id="s06" data-w-id="764c0b8e-c125-1186-d631-1972f42f10f9" class="section-1">
       <div class="product-div p-6">
         <div class="enter---readmore">
           <div id="w-node-_20b8290c-0733-c10b-1c6e-38b5f39432f1-dae08942" class="side-left">
@@ -281,7 +281,7 @@
         <div class="p-1200 p-6"></div>
       </div>
     </div>
-    <div data-w-id="a30cdb9a-476e-0408-106c-0ff84745c1f1" class="section-1">
+    <div id="s07" data-w-id="a30cdb9a-476e-0408-106c-0ff84745c1f1" class="section-1">
       <div class="product-div p-7">
         <div class="enter---readmore">
           <div id="w-node-_2e08ebf3-6a0f-db92-caf9-7ea1f37b9df1-dae08942" class="side-left">
@@ -295,7 +295,7 @@
         <div class="p-1200 p-7"></div>
       </div>
     </div>
-    <div data-w-id="213f2aff-8648-aea1-f32d-4874b4205cd2" class="section-1">
+    <div id="s08" data-w-id="213f2aff-8648-aea1-f32d-4874b4205cd2" class="section-1">
       <div class="product-div p-8">
         <div class="enter---readmore">
           <div id="w-node-_7d47b680-1533-1428-87ce-226b01afb11c-dae08942" class="side-left">
@@ -309,7 +309,7 @@
         <div class="p-1200 p-8"></div>
       </div>
     </div>
-    <div data-w-id="91aec1c4-1b09-75d4-ee01-1516136f3a56" class="section-1">
+    <div id="s09" data-w-id="91aec1c4-1b09-75d4-ee01-1516136f3a56" class="section-1">
       <div class="product-div p-9">
         <div class="enter---readmore">
           <div id="w-node-c14f8cf9-c209-4d8a-21d3-46137a1bab70-dae08942" class="side-left">
@@ -323,7 +323,7 @@
         <div class="p-1200 p-9"></div>
       </div>
     </div>
-    <div data-w-id="4f2460c7-13fa-f3b8-96ef-daa8f82e7b70" class="section-1">
+    <div id="s10" data-w-id="4f2460c7-13fa-f3b8-96ef-daa8f82e7b70" class="section-1">
       <div class="product-div p-10">
         <div class="enter---readmore">
           <div id="w-node-_86bad5dc-fcb8-c856-67aa-5533c7dd879b-dae08942" class="side-left">
@@ -337,7 +337,7 @@
         <div class="p-1200 p-10"></div>
       </div>
     </div>
-    <div data-w-id="b6619ec0-3345-1091-99c3-23ab0a45964b" class="section-1">
+    <div id="s11" data-w-id="b6619ec0-3345-1091-99c3-23ab0a45964b" class="section-1">
       <div class="product-div p-11">
         <div class="enter---readmore">
           <div id="w-node-_4d82b84e-8cea-40e1-d1f5-96e28717f5c0-dae08942" class="side-left">
@@ -351,7 +351,7 @@
         <div class="p-1200 p-11"></div>
       </div>
     </div>
-    <div data-w-id="78dc2d18-5b28-2b3f-e156-2be11cc2710b" class="section-1">
+    <div id="s12" data-w-id="78dc2d18-5b28-2b3f-e156-2be11cc2710b" class="section-1">
       <div class="product-div p-12">
         <div class="enter---readmore">
           <div id="w-node-_3bccf904-abf0-9f31-0231-62ce9fc7bc81-dae08942" class="side-left">
@@ -365,7 +365,7 @@
         <div class="p-1200 p-12"></div>
       </div>
     </div>
-    <div data-w-id="e1af9add-1f34-482d-dfe4-f82c4dab7e14" class="section-1">
+    <div id="s13" data-w-id="e1af9add-1f34-482d-dfe4-f82c4dab7e14" class="section-1">
       <div class="product-div p-13">
         <div class="enter---readmore">
           <div id="w-node-_1f744f09-1322-1bd0-5e65-2979d62ab958-dae08942" class="side-left">
@@ -382,14 +382,18 @@
   </div>
   <div data-w-id="a398b934-f41b-2eb7-933a-40b97c2d5273" class="s-content">
     <div data-w-id="a398b934-f41b-2eb7-933a-40b97c2d5274" class="c-1200">
-      <div class="flex-split-wrapper">
+      <div data-w-id="a398b934-f41b-2eb7-933a-40b97c2d5275" class="flex-split-wrapper">
         <div class="split-left">
           <h1 class="h3-main">联系我，期待与你的合作</h1>
-          <div class="p-white">Connect with me.<br>Look forward to working with you.</div>
+          <div class="p-white">Connect with me.<br>Look forward to cooperating with you.</div>
         </div>
         <div data-w-id="a398b934-f41b-2eb7-933a-40b97c2d527d" class="split-right"><img src="images/email.svg" loading="lazy" alt="" class="small-logo logo">
           <div class="p-white">Email：<br>zbswork@outlook.com</div>
         </div>
+      </div>
+      <div data-w-id="e49614f5-d9eb-a8dd-2354-a7b0fbdd6c21" class="dont-share">
+        <h4>未经允许请勿转载</h4>
+        <div class="p-white">Don&#x27;t transload without permission.</div>
       </div>
     </div>
     <div data-w-id="a398b934-f41b-2eb7-933a-40b97c2d5283" class="wave-lines-bg"><img src="images/double-wave.svg" loading="lazy" alt="" class="image-3"></div>
