--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Jun 10 2021 03:05:13 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Jun 10 2021 05:58:01 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60bf7868c7ac5e3669190b38" data-wf-site="608240d28593d46971d5ecc2">
 <head>
   <meta charset="utf-8">
@@ -37,8 +37,9 @@
     <div class="menu-bottom-wrapper"></div><img src="images/white-lines-2.svg" loading="lazy" alt="" class="menu-lines-bg">
   </div>
   <div data-w-id="3ec8e1c9-9308-629b-6f6e-906e4b301db8" style="background-color:rgb(223,223,223)" class="s-content page-contact">
-    <div data-w-id="85796c95-c2fd-891e-fad4-9d9526b96350" style="filter:invert(100%)" class="c-1200">
-      <div class="flex-split-wrapper page-contact">
+    <div class="c-1200"><img src="images/21-NEW-NO-NAME.jpg" loading="lazy" alt="" class="image-6">
+      <div data-w-id="18738345-65b1-472a-1de3-c789f7bdb27b" style="filter:invert(100%)" class="subheader contact">call me Mubaizi/croissant/zhang baishi<br>One love croissant Industrial Designer</div>
+      <div data-w-id="85796c95-c2fd-891e-fad4-9d9526b96351" style="filter:invert(100%)" class="flex-split-wrapper page-contact">
         <div class="split-left page-contact">
           <h1 class="h3-main">欢迎电邮联系我<br>获取更多联系方式并深入交流<br>期待与你的合作</h1>
           <div class="p-white">Welcome to contact me by email,<br>get more contact information and in-depth communication,<br>look forward to cooperating with you.</div>
