--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Jun 10 2021 03:05:13 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Jun 10 2021 05:58:01 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="608240d38593d459ced5ecc7" data-wf-site="608240d28593d46971d5ecc2">
 <head>
   <meta charset="utf-8">
@@ -94,9 +94,9 @@
         <div class="full-width-img-content-outer-wrapper">
           <div class="full-width-img-content-inner-wrapper">
             <div class="icon-heading-wrapper"><img src="images/sun-icon.svg" loading="lazy" width="45" alt="" class="image-2">
-              <h3 class="h3-main no-margin">感受世界不同，創造美好大同<br>Feel the world different and create the same beauty.</h3>
+              <h3 class="h3-main no-margin">感受世界不同，創造美好大同<br>Feel the world differently, and creat the same kind of goodliness</h3>
             </div>
-            <p class="s-white">美即是美、竭力于創造经典且美好的产品<br>Beauty is beauty.Try best to create classic and beautiful products.</p>
+            <p class="s-white">美即是美、竭力于創造精致且经典的产品<br>Goodliness is goodliness. We endeavor to create something exquisite and classic</p>
           </div>
         </div>
       </div>
@@ -116,7 +116,7 @@
       </div>
       <div data-w-id="e49614f5-d9eb-a8dd-2354-a7b0fbdd6c21" class="dont-share">
         <h4>未经允许请勿转载</h4>
-        <div class="p-white">Don&#x27;t transload without permission.</div>
+        <div class="p-white">No reproduction without permission</div>
       </div>
     </div>
     <div data-w-id="a398b934-f41b-2eb7-933a-40b97c2d5283" class="wave-lines-bg"><img src="images/double-wave.svg" loading="lazy" alt="" class="image-3"></div>
