--- a/work.html
+++ b/work.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Jun 10 2021 03:05:13 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Jun 10 2021 05:58:01 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6083d73ad2849627dae08942" data-wf-site="608240d28593d46971d5ecc2">
 <head>
   <meta charset="utf-8">
@@ -393,7 +393,7 @@
       </div>
       <div data-w-id="e49614f5-d9eb-a8dd-2354-a7b0fbdd6c21" class="dont-share">
         <h4>未经允许请勿转载</h4>
-        <div class="p-white">Don&#x27;t transload without permission.</div>
+        <div class="p-white">No reproduction without permission</div>
       </div>
     </div>
     <div data-w-id="a398b934-f41b-2eb7-933a-40b97c2d5283" class="wave-lines-bg"><img src="images/double-wave.svg" loading="lazy" alt="" class="image-3"></div>
