--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Jun 10 2021 05:58:01 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Jun 21 2021 03:53:45 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="608240d38593d459ced5ecc7" data-wf-site="608240d28593d46971d5ecc2">
 <head>
   <meta charset="utf-8">
@@ -10,7 +10,7 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/croissant-design.webflow.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Merriweather:300,300italic,400,400italic,700,700italic,900,900italic","Manrope:regular,500,600","Inter:regular,500,600","Source Sans Pro:regular:cyrillic,cyrillic-ext,greek,greek-ext,latin,latin-ext,vietnamese","ZCOOL QingKe HuangYou:regular:chinese-simplified,latin","ZCOOL XiaoWei:regular:chinese-simplified,latin"]  }});</script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Merriweather:300,300italic,400,400italic,700,700italic,900,900italic","Oswald:200,300,400,500,600,700","Manrope:regular,500,600","Inter:regular,500,600","Source Sans Pro:regular:cyrillic,cyrillic-ext,greek,greek-ext,latin,latin-ext,vietnamese","ZCOOL QingKe HuangYou:regular:chinese-simplified,latin","ZCOOL XiaoWei:regular:chinese-simplified,latin"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
