--- a/work.html
+++ b/work.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Jun 10 2021 05:58:01 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Jun 21 2021 03:53:45 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6083d73ad2849627dae08942" data-wf-site="608240d28593d46971d5ecc2">
 <head>
   <meta charset="utf-8">
@@ -12,7 +12,7 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/croissant-design.webflow.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Merriweather:300,300italic,400,400italic,700,700italic,900,900italic","Manrope:regular,500,600","Inter:regular,500,600","Source Sans Pro:regular:cyrillic,cyrillic-ext,greek,greek-ext,latin,latin-ext,vietnamese","ZCOOL QingKe HuangYou:regular:chinese-simplified,latin","ZCOOL XiaoWei:regular:chinese-simplified,latin"]  }});</script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Merriweather:300,300italic,400,400italic,700,700italic,900,900italic","Oswald:200,300,400,500,600,700","Manrope:regular,500,600","Inter:regular,500,600","Source Sans Pro:regular:cyrillic,cyrillic-ext,greek,greek-ext,latin,latin-ext,vietnamese","ZCOOL QingKe HuangYou:regular:chinese-simplified,latin","ZCOOL XiaoWei:regular:chinese-simplified,latin"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
@@ -193,6 +193,27 @@
         </div><img src="images/03_11.jpg" loading="lazy" data-w-id="4d5a49cb-37b0-a467-cafc-15aab22af889" sizes="100vw" srcset="images/03_11-p-500.jpeg 500w, images/03_11-p-800.jpeg 800w, images/03_11.jpg 1080w" alt="" class="image-detail">
         <div class="jiange"></div><img src="images/01_11.jpg" loading="lazy" data-w-id="63bafe04-3d7e-64d2-80b1-9e67e76292e5" sizes="100vw" srcset="images/01_11-p-500.jpeg 500w, images/01_11-p-800.jpeg 800w, images/01_11.jpg 1080w" alt="" class="image-detail">
         <div class="jiange"></div><img src="images/02_12.jpg" loading="lazy" data-w-id="ed9f029d-ed65-d1df-4ff6-e1371c3b8a63" sizes="100vw" srcset="images/02_12-p-500.jpeg 500w, images/02_12-p-800.jpeg 800w, images/02_12.jpg 1080w" alt="" class="image-detail">
+      </div>
+    </div>
+    <div style="-webkit-transform:translate3d(100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);display:none" class="pp01-detail">
+      <div class="d-1200">
+        <div class="detail-txt">
+          <h4>活桌</h4>
+          <h5>Lifetable</h5>
+          <h6>/ 2017</h6>
+        </div><img src="images/v1-03.jpg" loading="lazy" data-w-id="cf02d492-7308-71e1-04d7-c2efb28fb5fc" sizes="(max-width: 767px) 90vw, (max-width: 991px) 582.40625px, 752px" srcset="images/v1-03-p-500.jpeg 500w, images/v1-03-p-800.jpeg 800w, images/v1-03-p-1600.jpeg 1600w, images/v1-03.jpg 1920w" alt="" class="image-detail">
+        <div class="jiange"></div>
+        <h6>活桌是我以前的大学毕业设计。设计这个桌子的原因是当时在网上看到一个短视频，内容是一位上班族在地铁车厢里用着较为愁苦的表情吃着三明治。在如今的社会下，可能还有很多这样的个体也承受着种种压力但也依然顽强的生活着。无论任何生物，生命的这种顽强，积极的生活是能让人为之动容的。因此我的目标是把这种顽强的生命感融入到家具的设计中。</h6>
+        <h6>The lifetable is my former college graduation design. The reason for designing this table is that I saw a short video on the internet, which shows a commuter eating a sandwich with a sad expression in a subway car. In today&#x27;s society, there are probably many such individuals who are under various pressures but still live tenaciously. No matter what kind of creature, the tenacity of life and the positive life can make people feel moved. Therefore, my goal is to incorporate this tenacious sense of life into the design of furniture.</h6>
+        <div class="jiange"></div><img src="images/v1-04.jpg" loading="lazy" data-w-id="cf02d492-7308-71e1-04d7-c2efb28fb5fe" sizes="(max-width: 767px) 90vw, (max-width: 991px) 582.40625px, 752px" srcset="images/v1-04-p-500.jpeg 500w, images/v1-04-p-1080.jpeg 1080w, images/v1-04.jpg 1400w" alt="" class="image-detail">
+        <div class="jiange"></div>
+        <h6>最终的表达则是这个活桌。通过右侧的沥水支架设计，将平时餐具清洁后的残余的水分供给左侧的盆栽中，当然这些水分还是不够的，因此还可以拉开抽屉来给植物进行保养。在这样一个循环中，人给予了植物养分使其生长，而植物生长可以给人带来满足感以维持对生活的积极。</h6>
+        <h6>The ultimate expression is this living table. Through the design of the draining bracket on the right side, the residual water from the usual tableware cleaning is supplied to the potted plants on the left side, but of course this water is still not enough, so the drawer can also be pulled open to give the plants maintenance. In such a cycle, people give the plants nutrients to make them grow, and the plants grow to bring satisfaction to people to maintain a positive life.</h6>
+        <div class="jiange"></div><img src="images/v1-06.jpg" loading="lazy" data-w-id="cf02d492-7308-71e1-04d7-c2efb28fb600" sizes="(max-width: 767px) 88vw, (max-width: 991px) 571.5px, 737.921875px" srcset="images/v1-06-p-500.jpeg 500w, images/v1-06-p-800.jpeg 800w, images/v1-06-p-1600.jpeg 1600w, images/v1-06.jpg 1920w" alt="" class="image-detail">
+        <div class="jiange"></div><img src="images/v2-01.jpg" loading="lazy" data-w-id="7dceedb3-99b5-9f98-76bc-148fe7d117e1" sizes="(max-width: 767px) 78vw, (max-width: 991px) 507.171875px, 654.859375px" srcset="images/v2-01-p-500.jpeg 500w, images/v2-01-p-800.jpeg 800w, images/v2-01.jpg 1080w" alt="" class="image-detail">
+        <div class="jiange"></div><img src="images/v2-03.jpg" loading="lazy" data-w-id="ad15b3d3-f695-ccbc-07a1-f3180ec8fdc7" sizes="(max-width: 767px) 66vw, (max-width: 991px) 428.46875px, 553.234375px" srcset="images/v2-03-p-500.jpeg 500w, images/v2-03-p-1080.jpeg 1080w, images/v2-03.jpg 1500w" alt="" class="image-detail">
+        <div class="jiange"></div><img src="images/v2-04.jpg" loading="lazy" data-w-id="f1f08ffc-a548-a486-9492-680cd092eb68" sizes="(max-width: 767px) 59vw, (max-width: 991px) 383.484375px, 495.15625px" srcset="images/v2-04-p-500.jpeg 500w, images/v2-04-p-1080.jpeg 1080w, images/v2-04.jpg 1500w" alt="" class="image-detail">
+        <div class="jiange"></div><img src="images/v2-02.jpg" loading="lazy" data-w-id="4abeb475-2c23-eb0c-64d3-b6af0c112ec7" sizes="(max-width: 767px) 56vw, (max-width: 991px) 363.21875px, 469px" srcset="images/v2-02-p-500.jpeg 500w, images/v2-02-p-1080.jpeg 1080w, images/v2-02.jpg 1500w" alt="" class="image-detail">
       </div>
     </div>
   </div>
@@ -377,6 +398,25 @@
         </div>
         <div class="p-1200 p-13 hover"></div>
         <div class="p-1200 p-13"></div>
+      </div>
+    </div>
+    <div id="s13" data-w-id="0e4b3606-cfab-5e27-39b7-79d99203b250" class="section-1 pr">
+      <div class="product-div pr">
+        <h4 class="personal-project">personal project</h4>
+      </div>
+    </div>
+    <div id="s13" data-w-id="193a6577-3ef3-cd48-3099-401669f25416" class="section-1">
+      <div class="product-div pp-01">
+        <div class="enter---readmore">
+          <div id="w-node-_193a6577-3ef3-cd48-3099-401669f25419-dae08942" class="side-left">
+            <h3 class="heading-2">01</h3>
+          </div>
+          <a href="#detail-top" id="w-node-_193a6577-3ef3-cd48-3099-401669f2541c-dae08942" data-w-id="193a6577-3ef3-cd48-3099-401669f2541c" style="opacity:0" class="readmore w-inline-block">
+            <h5 class="heading-3">Read more</h5>
+          </a>
+        </div>
+        <div class="p-1200 pp-01 hover"></div>
+        <div class="p-1200 pp-01"></div>
       </div>
     </div>
   </div>
